ft: fix congrats wrapper z-index
 - fix congrats wrapper z-index

[Finishes #173499687]

--- a/frontend/styles/sudoku.sass
+++ b/frontend/styles/sudoku.sass
@@ -51,6 +51,7 @@ $standardMargin: 5px
     position: absolute
     width: 100%
     height: 100%
+    z-index: 1000
 
     svg
       fill: $mainNavBarColor
@@ -470,6 +471,8 @@ table
       padding: .5em
       margin: .2em 0
       text-transform: capitalize
+      min-width: 80px
+      max-width: 90px
 
   .controls-select
     display: flex
